--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
 </div>
 
-<link rel="stylesheet" href="css/MyStyle.css">
+<link rel="stylesheet" href="css/style.css">
 <link rel="stylesheet" media="print" href="css/print.css">
 <link rel="stylesheet" media="(max-width: 480px)" href="css/portrait.css">
 
